# TDengine

cmake/: cmake.define  cmake.options  cmake.platform  define.inc  geos_CMakeLists.txt.in  rocksdb_CMakeLists.txt.in  taostools_CMakeLists.txt.in
contrib/: CMakeLists.txt
docs/en/09-tools/: 70-seeq.md
docs/en/12-taos-sql/: 06-select.md
docs/en/14-reference/: 08-taos-shell.md
docs/zh/08-connector/: 14-java.mdx  26-rust.mdx
docs/zh/09-tools/: 03-taosdump.md
docs/zh/12-taos-sql/: 06-select.md
examples/c/: CMakeLists.txt  taosc_query.c  taosc_query.cpp
include/common/: tglobal.h  tgrant.h  tmsg.h  tmsgdef.h
include/dnode/mnode/: mnode.h
include/libs/audit/: audit.h
include/libs/monitor/: monitor.h
include/libs/monitor2/: prom_collector_registry.h
include/libs/nodes/: plannodes.h
include/libs/parser/: parser.h
include/libs/planner/: planner.h
include/libs/stream/: tstream.h
include/libs/sync/: sync.h
include/libs/wal/: wal.h
include/os/: osSysinfo.h  osThread.h
include/util/: taoserror.h  tdef.h  tpagedbuf.h  tutil.h
packaging/deb/: taosd
packaging/tools/: makepkg.sh  post.sh  tdengine.iss
source/client/inc/: clientInt.h
source/client/src/: clientHb.c  clientImpl.c  clientMain.c  clientMsgHandler.c  clientRawBlockWrite.c  clientSml.c  (+5 more)
source/libs/: CMakeLists.txt
source/util/: CMakeLists.txt
source/util/src/: terror.c  tjson.c  tpagedbuf.c  tutil.c
src/inc/: taoserror.h
tests/parallel_test/: cases.task  container_build.sh
tests/perf-test/: build.sh  buildTD.py  write_perf_data.py
tools/scripts/: iotdb-import.sh
(+205 files in other folders)
